# calories_counter_bot

./: .pre-commit-config.yaml  README.md  db.sql  pyproject.toml
calories_counter_bot/: config.py  constans.py  handlers.py  main.py
