[tool.poetry]
name = "calories-counter-bot"
version = "0.1.0"
description = "Telegram bot for calculate calories"
authors = ["inoob26 <inoob26@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py311"]
line-length = 120
color = true

[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 6
statistics = true
max-line-length = 120
doctests = true
no-accept-encodings = true
# Flake plugins:
accept-encodings = "utf-8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
